--- a/components/ideintf/languages/objinspstrconsts.fi.po
+++ b/components/ideintf/languages/objinspstrconsts.fi.po
@@ -400,10 +400,6 @@ msgstr "Ylös"
 msgid "0 lines, 0 chars"
 msgstr "Ei rivejä eikä merkkejä"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -686,7 +682,7 @@ msgstr "\"%s\" ei ole sallittu metodin nimi."
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
