--- a/components/ideintf/languages/objinspstrconsts.ja.po
+++ b/components/ideintf/languages/objinspstrconsts.ja.po
@@ -400,10 +400,6 @@ msgstr "上"
 msgid "0 lines, 0 chars"
 msgstr "0 行、 0 文字"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -692,7 +688,7 @@ msgstr "%s%s%sは有効なメソッド名ではありません。"
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
