--- a/components/ideintf/languages/objinspstrconsts.pt_BR.po
+++ b/components/ideintf/languages/objinspstrconsts.pt_BR.po
@@ -396,10 +396,6 @@ msgstr "Acima"
 msgid "0 lines, 0 chars"
 msgstr "0 linhas, 0 caracteres"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -682,7 +678,7 @@ msgstr "\"%s\" não é um nome de método válido."
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
