--- a/components/ideintf/languages/objinspstrconsts.uk.po
+++ b/components/ideintf/languages/objinspstrconsts.uk.po
@@ -399,10 +399,6 @@ msgstr "Вгору"
 msgid "0 lines, 0 chars"
 msgstr "0 рядків, 0 символів"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -685,7 +681,7 @@ msgstr "\"%s\" не є правильною назвою методу."
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
