--- a/components/ideintf/languages/objinspstrconsts.zh_CN.po
+++ b/components/ideintf/languages/objinspstrconsts.zh_CN.po
@@ -397,10 +397,6 @@ msgstr "上"
 msgid "0 lines, 0 chars"
 msgstr "0行,0字符"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -683,7 +679,7 @@ msgstr "\"%s\"不是一个有效的方法名称."
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
