--- a/components/ideintf/languages/objinspstrconsts.ca.po
+++ b/components/ideintf/languages/objinspstrconsts.ca.po
@@ -411,10 +411,6 @@ msgstr "Dalt"
 msgid "0 lines, 0 chars"
 msgstr "0 línies, 0 caràcters"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -711,7 +707,7 @@ msgstr ""
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
