--- a/components/ideintf/languages/objinspstrconsts.de.po
+++ b/components/ideintf/languages/objinspstrconsts.de.po
@@ -397,10 +397,6 @@ msgstr "Hoch"
 msgid "0 lines, 0 chars"
 msgstr "0 Zeilen, 0 Zeichen"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -683,7 +679,7 @@ msgstr "\"%s\" ist kein gültiger Methodenname."
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
