--- a/components/ideintf/languages/objinspstrconsts.nl.po
+++ b/components/ideintf/languages/objinspstrconsts.nl.po
@@ -410,10 +410,6 @@ msgstr "Omhoog"
 msgid "0 lines, 0 chars"
 msgstr "0 regels, 0 letters"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -705,7 +701,7 @@ msgstr ""
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
