--- a/components/ideintf/languages/objinspstrconsts.pot
+++ b/components/ideintf/languages/objinspstrconsts.pot
@@ -387,10 +387,6 @@ msgstr ""
 msgid "0 lines, 0 chars"
 msgstr ""
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -673,7 +669,7 @@ msgstr ""
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
