--- a/components/ideintf/languages/objinspstrconsts.sk.po
+++ b/components/ideintf/languages/objinspstrconsts.sk.po
@@ -397,10 +397,6 @@ msgstr "Vyššie"
 msgid "0 lines, 0 chars"
 msgstr "0 riadkov, 0 znakov"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -691,7 +687,7 @@ msgstr "\"%s\" nie je platné meno metódy."
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
