--- a/components/ideintf/languages/objinspstrconsts.tr.po
+++ b/components/ideintf/languages/objinspstrconsts.tr.po
@@ -400,10 +400,6 @@ msgstr "Yukarı"
 msgid "0 lines, 0 chars"
 msgstr "0 satır, 0 karakter"
 
-#: objinspstrconsts.ois1item
-msgid "1 item"
-msgstr ""
-
 #: objinspstrconsts.ois1linedchars
 #, object-pascal-format
 msgid "1 line, %d chars"
@@ -686,7 +682,7 @@ msgstr "\"%s\" geçerli bir yöntem adı değil."
 
 #: objinspstrconsts.oisitems
 #, object-pascal-format
-msgid "%s items"
+msgid "items: %s"
 msgstr ""
 
 #: objinspstrconsts.oisitemsselected
