ToDoList: regenerated translations and updated Russian translation

--- a/components/todolist/languages/todoliststrconsts.ru.po
+++ b/components/todolist/languages/todoliststrconsts.ru.po
@@ -144,6 +144,10 @@ msgstr "Редактирование элемента списка ToDo/Done/Not
 msgid "Insert a ToDo/Done/Note"
 msgstr "Вставить элемент списка ToDo/Done/Note"
 
+#: todoliststrconsts.listodocolorsareattheendofcolorlist
+msgid "ToDo colors are at the end of color list"
+msgstr "Цвета ToDo находятся в конце списка"
+
 #: todoliststrconsts.listodoexport
 msgid "Export"
 msgstr "Экспорт"
