--- a/lcl/languages/lclstrconsts.pt.po
+++ b/lcl/languages/lclstrconsts.pt.po
@@ -172,7 +172,9 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 #: lclstrconsts.rscannotfocus
-msgid "Can not focus"
+#, fuzzy
+#| msgid "Can not focus"
+msgid "Cannot focus"
 msgstr "Impossível focar"
 
 #: lclstrconsts.rscanvasdoesnotallowdrawing
@@ -948,10 +950,6 @@ msgstr "Realce Menu"
 msgid "Menu Text"
 msgstr "Texto Menu"
 
-#: lclstrconsts.rsmodified
-msgid "  modified "
-msgstr "  modificado  "
-
 #: lclstrconsts.rsmoneygreencolorcaption
 msgid "Money Green"
 msgstr "Verde dinheiro"
@@ -1249,10 +1247,6 @@ msgstr ""
 msgid "Silver"
 msgstr "Prata"
 
-#: lclstrconsts.rssize
-msgid "  size "
-msgstr "  tamanho  "
-
 #: lclstrconsts.rsskybluecolorcaption
 msgid "Sky Blue"
 msgstr "Azul Celeste"
@@ -1381,7 +1375,9 @@ msgid "Yellow"
 msgstr "Amarelo"
 
 #: lclstrconsts.scannotfocus
-msgid "Cannot focus a disabled or invisible window"
+#, object-pascal-format, fuzzy, badformat
+#| msgid "Cannot focus a disabled or invisible window"
+msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
 msgstr "Impossível focar uma janela inativa ou invisível"
 
 #: lclstrconsts.sduplicatemenus
