--- a/lcl/languages/lclstrconsts.pt_BR.po
+++ b/lcl/languages/lclstrconsts.pt_BR.po
@@ -172,7 +172,9 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 #: lclstrconsts.rscannotfocus
-msgid "Can not focus"
+#, fuzzy
+#| msgid "Can not focus"
+msgid "Cannot focus"
 msgstr "Impossível focar"
 
 #: lclstrconsts.rscanvasdoesnotallowdrawing
@@ -924,10 +926,6 @@ msgstr "Destaque menu"
 msgid "Menu Text"
 msgstr "Texto menu"
 
-#: lclstrconsts.rsmodified
-msgid "  modified "
-msgstr "  modificado  "
-
 #: lclstrconsts.rsmoneygreencolorcaption
 msgid "Money Green"
 msgstr "Verde dinheiro"
@@ -1221,10 +1219,6 @@ msgstr ""
 msgid "Silver"
 msgstr "Prata"
 
-#: lclstrconsts.rssize
-msgid "  size "
-msgstr "  tamanho  "
-
 #: lclstrconsts.rsskybluecolorcaption
 msgid "Sky Blue"
 msgstr "Azul celeste"
@@ -1351,7 +1345,9 @@ msgid "Yellow"
 msgstr "Amarelo"
 
 #: lclstrconsts.scannotfocus
-msgid "Cannot focus a disabled or invisible window"
+#, object-pascal-format, fuzzy, badformat
+#| msgid "Cannot focus a disabled or invisible window"
+msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
 msgstr "Impossível focar uma janela inativa ou invisível"
 
 #: lclstrconsts.sduplicatemenus
