--- a/lcl/languages/lclstrconsts.it.po
+++ b/lcl/languages/lclstrconsts.it.po
@@ -176,7 +176,9 @@ msgid "Cancel"
 msgstr "Cancella"
 
 #: lclstrconsts.rscannotfocus
-msgid "Can not focus"
+#, fuzzy
+#| msgid "Can not focus"
+msgid "Cannot focus"
 msgstr "Impossibile dare il focus"
 
 #: lclstrconsts.rscanvasdoesnotallowdrawing
@@ -942,10 +944,6 @@ msgstr "Evidenzia menu"
 msgid "Menu Text"
 msgstr "Testo menu"
 
-#: lclstrconsts.rsmodified
-msgid "  modified "
-msgstr "  modificato "
-
 #: lclstrconsts.rsmoneygreencolorcaption
 msgid "Money Green"
 msgstr "Verde moneta"
@@ -1243,10 +1241,6 @@ msgstr ""
 msgid "Silver"
 msgstr "Argento"
 
-#: lclstrconsts.rssize
-msgid "  size "
-msgstr "  ampiezza "
-
 #: lclstrconsts.rsskybluecolorcaption
 msgid "Sky Blue"
 msgstr "Blu cielo"
@@ -1375,7 +1369,9 @@ msgid "Yellow"
 msgstr "Giallo"
 
 #: lclstrconsts.scannotfocus
-msgid "Cannot focus a disabled or invisible window"
+#, object-pascal-format, fuzzy, badformat
+#| msgid "Cannot focus a disabled or invisible window"
+msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
 msgstr "Impossibile dare il focus a finestre disabilitate o invisibili"
 
 #: lclstrconsts.sduplicatemenus
