--- a/lcl/languages/lclstrconsts.pot
+++ b/lcl/languages/lclstrconsts.pot
@@ -165,7 +165,7 @@ msgid "Cancel"
 msgstr ""
 
 #: lclstrconsts.rscannotfocus
-msgid "Can not focus"
+msgid "Cannot focus"
 msgstr ""
 
 #: lclstrconsts.rscanvasdoesnotallowdrawing
@@ -893,10 +893,6 @@ msgstr ""
 msgid "Menu Text"
 msgstr ""
 
-#: lclstrconsts.rsmodified
-msgid "  modified "
-msgstr ""
-
 #: lclstrconsts.rsmoneygreencolorcaption
 msgid "Money Green"
 msgstr ""
@@ -1144,10 +1140,6 @@ msgstr ""
 msgid "Silver"
 msgstr ""
 
-#: lclstrconsts.rssize
-msgid "  size "
-msgstr ""
-
 #: lclstrconsts.rsskybluecolorcaption
 msgid "Sky Blue"
 msgstr ""
@@ -1274,7 +1266,8 @@ msgid "Yellow"
 msgstr ""
 
 #: lclstrconsts.scannotfocus
-msgid "Cannot focus a disabled or invisible window"
+#, object-pascal-format
+msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
 msgstr ""
 
 #: lclstrconsts.sduplicatemenus
